# rldk

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  01_prepare_data_full.py  02_train_reward_model_full.py  03_run_ppo_baseline_full.py  04_run_variants_with_issues_full.py  05_rldk_checks.sh  06_make_report.py  =0.20.0  =0.9.0  ADAPTER_IMPORT_VERIFICATION.md  AGENTS.md  ANOMALY_DETECTION_GUIDE.md  API_CONTRACT.md  BACKWARD_COMPATIBILITY.md  BARE_EXCEPT_FIXES.md  BUG_FIXES_SUMMARY.md  CARD_IMPORT_FIX_SUMMARY.md  CLI_REFACTORING_SUMMARY.md  CODEX_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_FIX_SUMMARY.md  COMPREHENSIVE_PPO_FORENSICS_SUMMARY.md  CONFIGURATION_CENTRALIZATION_SUMMARY.md  CONFIGURATION_GUIDE.md  CONTRACT_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CONVERGENCE_AND_GRADIENT_EXPLOSION_FIXES.md  CRITICAL_BUG_FIXES.md  CRITICAL_BUG_FIXES_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_UPDATE_HOOKS_IMPLEMENTATION.md  DATA_INGESTION_IMPROVEMENTS.md  DEMONSTRATION_ANALYSIS.md  DEMO_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DETERMINISM_WARNINGS_IMPLEMENTATION_SUMMARY.md  DETERMINISTIC_FIXES_SUMMARY.md  (+257 more)
.github/: pull_request_template.md
anomaly_test_results/: alerts_step_100.json  alerts_step_101.json  alerts_step_102.json  alerts_step_103.json  alerts_step_104.json  alerts_step_125.json  alerts_step_126.json  alerts_step_20.json  alerts_step_30.json  alerts_step_40.json  alerts_step_51.json  alerts_step_52.json  alerts_step_53.json  alerts_step_54.json  alerts_step_60.json  alerts_step_80.json  alerts_step_90.json  anomaly_detection_report.json
artifacts/: alerts.txt  api_contract.diff.txt  demo_rules.yaml  env_report.txt  final_report.md  monitoring_report.json  report.md  reward_drop_sentinel.json
blog_assets/: README.md  RLDK_Technical_Blog_Post.md  VERIFICATION_CHECKLIST.md  asset_organization.md  comments_todo.txt  create_visualizations.py  create_visualizations_simple.py  data_summary.md  data_visualization.md  screenshot_guide.md  verify_data_consistency.py
comprehensive_analysis_results/: rldk_comprehensive_insights_report.json
comprehensive_ppo_forensics_demo/: comprehensive_analysis.json  health_summary.json
comprehensive_ppo_monitor_demo/: comprehensive_demo_run_comprehensive_metrics.csv  comprehensive_demo_run_comprehensive_metrics.json  comprehensive_demo_run_final_comprehensive_analysis.json  comprehensive_demo_run_health_summary.json
configs/: README.md  grpo_tiny.yaml  ppo_tiny.yaml  rules.yaml
demo_output/: demo_run_alerts.json  demo_run_checkpoint_4.json  demo_run_checkpoint_7.json  demo_run_config.json  demo_run_final_report.json  demo_run_metrics.csv  demo_run_metrics.json
demo_simple_output/: simple_demo_alerts.json  simple_demo_app.py  simple_demo_checkpoint_4.json  simple_demo_checkpoint_7.json  simple_demo_config.json  simple_demo_final_report.json  simple_demo_metrics.csv  simple_demo_metrics.json
determinism_analysis/: determinism_card.md  determinism_report.md
diff_analysis/: diff_events.csv  diff_report.md  drift_card.md
docs/: AGENTS.md  ANOMALY_DETECTION_IMPLEMENTATION_SUMMARY.md  ANOMALY_DETECTION_IMPROVEMENTS.md  API_CONTRACT.md  BARE_EXCEPT_FIXES.md  COMPREHENSIVE_PPO_FORENSICS_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_UPDATE_HOOKS_IMPLEMENTATION.md  DEMO_SUMMARY.md  DETERMINISM_WARNINGS_IMPLEMENTATION_SUMMARY.md  DIVISION_BY_ZERO_FIXES_SUMMARY.md  EVALUATION_METRICS_IMPLEMENTATION_SUMMARY.md  FINAL_TEST_SUMMARY.md  GOLDEN_MASTER_TESTING.md  INTEGRITY_CHECKS_IMPLEMENTATION_SUMMARY.md  JSONL_CONSISTENCY_BUGFIX_SUMMARY.md  JSONL_IMPLEMENTATION_SUMMARY.md  KL_DIVERGENCE_GUIDE.md  KL_DIVERGENCE_IMPLEMENTATION_SUMMARY.md  KL_DRIFT_GUIDE.md  MANUAL_INSTALLATION_BUGFIX_SUMMARY.md  NETWORK_MONITORING_IMPLEMENTATION.md  OPENRLHF_INTEGRATION_GUIDE.md  OPENRLHF_INTEGRATION_SUMMARY.md  PERFORMANCE_ANALYZER_IMPLEMENTATION_SUMMARY.md  PHASE_A_IMPLEMENTATION_SUMMARY.md  PHASE_B_IMPLEMENTATION_SUMMARY.md  PHASE_B_PROFILER_IMPLEMENTATION_SUMMARY.md  PHASE_B_README.md  PPO_METRICS_COLLECTION_IMPLEMENTATION.md  PR15_TEST_PLAN.md  PROMPT_COUNTING_AND_DIVISION_ERROR_FIXES.md  PR_DESCRIPTION.md  PYTHON_VERSION_BUGFIX_SUMMARY.md  README_NETWORK_MONITORING.md  REPLAY_IMPLEMENTATION_SUMMARY.md  REPLAY_README.md  ROBUST_COLUMN_HANDLING.md  SEAMLESS_INSTALLATION_CONFIRMATION.md  SILENT_ERROR_HANDLING_ANALYSIS.md  (+14 more)
dpo_test_output/: README.md
enhanced_ppo_scan_demo/: enhanced_scan_results.json
eval_results/: eval_card.md  eval_summary.json
examples/: README_monitor_actions.md  basic_ppo_cartpole.ipynb  basic_ppo_cartpole.py  benchmark_comparison.py  comprehensive_ppo_forensics_example.py  config_usage.py  custom_environment_tutorial.py  distributed_training_guide.py  example_anomaly_detection_integration.py  grpo_minimal_loop.py  grpo_toy_text.py  hyperparameter_tuning.py  length_bias_card_demo.py  minimal_streaming_loop.py  monitoring_actions_demo.py  multi_run_analysis.py  openrlhf_network_demo.py  openrlhf_network_monitoring_example.py  openrlhf_training_example.py  ppo_offline_min.py  ppo_offline_min_simple.py  ppo_offline_minimal.py  production_deployment_checklist.py  quickstart_cpu.py  replay_demo.py  research_repro_workflow.py  research_reproducibility_workflow.py  rldk_demo.ipynb  robust_column_handling_example.py  rules.yaml  run_evals.py  run_grpo_tiny.py  run_ppo_tiny.py  standalone_monitor.py  standalone_streaming_loop.py  test_full_grpo.py  test_full_ppo.py  test_large_model.py  tracking_demo.py  tracking_demo_simple.py  (+5 more)
golden_master_output/: golden_master_summary.json  stdout_logs.txt
monitor/: app.py
profiler/: __init__.py  anomaly_detection.py  hooks.py  profiler_context.py  report.py  torch_profiler.py
recipes/: health_default.yaml
reference/: ACCOMPLISHMENT_SUMMARY.md  CASE_STUDIES.md  FILE_INDEX.md  INSTALLATION.md  INTEGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  SUITE_SUMMARY.md
replay_demo_results/: replay_comparison.json
replay_output/: replay_comparison_report.txt  replay_summary.json
report/: researcher_journal.md
reward_analysis/: reward_health_card.md  (+1 more)
scripts/: README.md  (+36 more)
(+1224 files in other folders)
