[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rldk"
version = "0.1.0"
description = "RL Debug Kit - Library and CLI for debugging reinforcement learning training runs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RLDK Contributors"}
]
keywords = ["reinforcement-learning", "debugging", "machine-learning", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "rich>=13.0.0",
    "wandb>=0.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
rldk = "rldk.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/rldk"
Repository = "https://github.com/your-org/rldk"
Documentation = "https://github.com/your-org/rldk#readme"
Issues = "https://github.com/your-org/rldk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rldk"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
