[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rldk"
version = "0.1.0"
description = "RL Debug Kit - Library and CLI for debugging reinforcement learning training runs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RLDK Contributors"}
]
keywords = ["reinforcement-learning", "debugging", "machine-learning", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "rich>=13.7.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=2.16.0",
    "nltk>=3.8.1",
    "tokenizers>=0.20.0",
    "jsonschema>=4.20.0",
    "packaging>=23.2",
    "streamlit>=1.29.0",
    "plotly>=5.17.0",
    "trl>=0.7.0,<0.24.0",
    "accelerate>=0.26.0",
    "flask>=3.0.0",
    "psutil>=5.9.0",
    "detoxify>=0.5.2",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "hypothesis>=6.0.0",
]
parquet = [
    "pyarrow>=10.0.0",
]
openrlhf = [
    "openrlhf>=0.1.0",
]

[project.scripts]
rldk = "rldk.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/rldk"
Repository = "https://github.com/your-org/rldk"
Documentation = "https://github.com/your-org/rldk#readme"
Issues = "https://github.com/your-org/rldk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rldk"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.include]
"src/rldk/reward/health_config/data/*" = "rldk/reward/health_config/data/"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B007",  # unused loop control variable
]

[tool.ruff.lint.isort]
known-first-party = ["rldk"]
force-single-line = false
force-sort-within-sections = false
single-line-exclusions = ["typing"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"examples/*" = ["F401", "F811", "B007"]
"scripts/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
